fix: change align rules

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,12 +1,101 @@
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
 p {
   font-weight: bold;
 }
 
 .flex {
   display: flex;
-  height: 100vh;
   align-items: center;
   text-align: center;
+  margin: 0;
 }
 
 .w-50 {
@@ -23,8 +112,6 @@ p {
   width: 564px;
   margin: 0 auto;
   display: flex;
-  justify-content: center;
-  align-items: center;
   position: relative;
 }
 
@@ -37,6 +124,7 @@ p {
 
 .resultString {
   font-size: 100px;
+  margin: 0;
 }
 
 .effect1Block {
@@ -50,20 +138,14 @@ p {
   }
   .str1 {
     position: absolute;
-    left: 1;
-    top: 1;
   }
   .str2 {
     position: absolute;
-    left: 1;
-    top: 1;
     color: #fff;
     -webkit-text-stroke: 6px #fff;
   }
   .str3 {
     position: absolute;
-    left: 1;
-    top: 1;
     -webkit-text-stroke: 3px #0037da;
   }
 }
